# madara

./: CHANGELOG.md  Cargo.toml  Dockerfile  madara.code-workspace
.github/workflows/: coverage.yml
configs/presets/: devnet.yaml
crates/client/block_import/src/: verify_apply.rs
crates/client/db/: Cargo.toml
crates/client/db/src/: block_db.rs  lib.rs
crates/client/devnet/src/: lib.rs
crates/client/exec/: Cargo.toml
crates/client/gateway/: Cargo.toml
crates/client/gateway/client/: Cargo.toml
crates/client/gateway/server/: Cargo.toml
crates/client/gateway/server/src/: error.rs  handler.rs  service.rs
crates/client/gateway/src/server/: error.rs  handler.rs  router.rs  service.rs
crates/client/mempool/: Cargo.toml
crates/client/mempool/src/: block_production.rs  close_block.rs  lib.rs
crates/client/rpc/: Cargo.toml
crates/client/rpc/src/: lib.rs  test_utils.rs
crates/client/rpc/src/providers/: forward_to_provider.rs  mempool.rs
crates/client/rpc/src/utils/: mod.rs  transaction.rs
crates/client/sync/: Cargo.toml
crates/client/sync/src/: l2.rs  lib.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/node/src/extensions/: mod.rs  pragma_dispatch.rs
crates/node/src/service/: block_production.rs  gateway.rs  l1.rs  rpc.rs  sync.rs
crates/primitives/exex/: Cargo.toml
crates/primitives/exex/src/: context.rs  launcher.rs  manager.rs  notification.rs
crates/primitives/rpc_provider/: Cargo.toml
crates/primitives/rpc_provider/src/: errors.rs  lib.rs  utils.rs
infra/pragma/: pragma-devnet.yaml  pragma-env.yaml
(+44 files in other folders)
