[package]
name = "mp-rpc-provider"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]

# Starknet
starknet-core.workspace = true
# Madara

# Other
anyhow = { workspace = true }
jsonrpsee = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
primitive-types.workspace = true
reqwest = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
